kube-web-log-viewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-web-log-viewer-deployment
  # namespace: your-target-namespace
  labels:
    app.kubernetes.io/name: kube-web-log-viewer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-web-log-viewer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-web-log-viewer
    spec:
      serviceAccountName: kube-web-log-viewer-sa
      terminationGracePeriodSeconds: 2
      containers:
      - name: kube-web-log-viewer-container
        image: python:3.13-slim
        command: ["/bin/sh", "-c"]
        args: ["pip install -e /app --break-system-packages && python /app/app.py"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "1500m"
        volumeMounts:
        - name: log-viewer-config
          mountPath: /app
        - name: log-dir
          mountPath: /logs
      volumes:
      - name: log-viewer-config
        configMap:
          name: kube-web-log-viewer
      - name: log-dir
        # when using emptyDir, the logs are not persisted across pod restarts
        emptyDir: {}
        # to use a persistent volume, uncomment the following and comment out the emptyDir
        # persistentVolumeClaim:
        #   claimName: log-viewer-pvc
        # storageClassName: standard # if there is no default storage class, you can specify one here

---
apiVersion: v1
kind: Service
metadata:
  name: kube-web-log-viewer-service
  # namespace: your-target-namespace
  labels:
    app.kubernetes.io/name: kube-web-log-viewer
spec:
  selector:
    app.kubernetes.io/name: kube-web-log-viewer
  ports:
  - name: http
    protocol: TCP
    port: 5001 # The port the Service will listen on
    targetPort: 5001 # The port on the pod that the Service will forward traffic to
