ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
  name: log-viewer-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: YOUR_FQDN
    http:
      paths:
      - backend:
          service:
            name: kube-log-viewer-service
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - YOUR_FQDN
    secretName: log-viewer-tls
